src/parser/MiniJavaChecker.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaChecker.java */
package parser;

import java.util.ArrayList;
import java.util.List;

import syntax.*;

public class MiniJavaChecker implements MiniJavaCheckerConstants {

  static final public Program Program() throws ParseException {
    trace_call("Program");
    try {
 Program p; MainClass m; List<ClassDecl> cl = new ArrayList<ClassDecl>(); ClassDecl c;
      m = MainClass();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        c = ClassDecl();
                          cl.add(c);
      }
      jj_consume_token(0);
         p = new Program(m, cl);{if (true) return p;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Program");
    }
  }

// statement one or multi?
  static final public MainClass MainClass() throws ParseException {
    trace_call("MainClass");
    try {
                       MainClass mc; Identifier ai1; Identifier ai2; Statement as;
      jj_consume_token(CLASS);
      ai1 = Identifier();
      jj_consume_token(LEFTBRACE);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(LEFTPAREN);
      jj_consume_token(STRING);
      jj_consume_token(LEFTBRACKET);
      jj_consume_token(RIGHTBRACKET);
      ai2 = Identifier();
      jj_consume_token(RIGHTPAREN);
         List <Statement> asl = new ArrayList <Statement>();
      jj_consume_token(LEFTBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEFTBRACE:
        case IF:
        case WHILE:
        case PRINT:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
         Statement s2;
        s2 = Statement();
         asl.add(s2);
      }
      jj_consume_token(RIGHTBRACE);
     Block b = new Block(asl); as = b;
      jj_consume_token(RIGHTBRACE);
         mc = new MainClass(ai1, ai2, as);{if (true) return mc;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("MainClass");
    }
  }

  static final public ClassDecl ClassDecl() throws ParseException {
    trace_call("ClassDecl");
    try {
                       ClassDecl cd;
      if (jj_2_1(3)) {
        cd = SimpleClassDecl();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          cd = ExtendingClassDecl();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      {if (true) return cd;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ClassDecl");
    }
  }

  static final public SimpleClassDecl SimpleClassDecl() throws ParseException {
    trace_call("SimpleClassDecl");
    try {
                                   SimpleClassDecl sc;
      Identifier ai; List <VarDecl> avl= new ArrayList<VarDecl>(); List <MethodDecl> aml= new ArrayList<MethodDecl>();
      jj_consume_token(CLASS);
      ai = Identifier();
      jj_consume_token(LEFTBRACE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
      VarDecl vd;
        vd = VarDecl();
                                   avl.add(vd);
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
      MethodDecl md;
        md = MethodDecl();
                                       aml.add(md);
      }
      jj_consume_token(RIGHTBRACE);
     sc = new SimpleClassDecl(ai, avl, aml); {if (true) return sc;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("SimpleClassDecl");
    }
  }

  static final public ExtendingClassDecl ExtendingClassDecl() throws ParseException {
    trace_call("ExtendingClassDecl");
    try {
                                         ExtendingClassDecl ec;
      Identifier ai; Identifier aj; List <VarDecl> avl= new ArrayList<VarDecl>(); List <MethodDecl> aml= new ArrayList<MethodDecl>();
      jj_consume_token(CLASS);
      ai = Identifier();
      jj_consume_token(EXTENDS);
      aj = Identifier();
      jj_consume_token(LEFTBRACE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_5;
        }
      VarDecl vd;
        vd = VarDecl();
                                   avl.add(vd);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
      MethodDecl md;
        md = MethodDecl();
                                       aml.add(md);
      }
      jj_consume_token(RIGHTBRACE);
     ec = new ExtendingClassDecl(ai, aj, avl, aml); {if (true) return ec;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ExtendingClassDecl");
    }
  }

  static final public VarDecl VarDecl() throws ParseException {
    trace_call("VarDecl");
    try {
                   Type at; Identifier ai;
      at = Type();
      ai = Identifier();
      jj_consume_token(SEMICOLON);
     VarDecl vd = new VarDecl(at, ai); {if (true) return vd;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("VarDecl");
    }
  }

// Formal list may be problem;
  static final public MethodDecl MethodDecl() throws ParseException {
    trace_call("MethodDecl");
    try {
                         Type at; Identifier ai; List <Formal>afl= new ArrayList<Formal>(); List <VarDecl> avl= new ArrayList<VarDecl>(); List <Statement> asl= new ArrayList<Statement>(); Expression ae;
      jj_consume_token(PUBLIC);
      at = Type();
      ai = Identifier();
      jj_consume_token(LEFTPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        afl = FormalList();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(RIGHTPAREN);
      jj_consume_token(LEFTBRACE);
     MethodBody mb;
      mb = MethodBody();
     avl = mb.vl; asl = mb.sl;
      jj_consume_token(RETURN);
      ae = Exp1();
      jj_consume_token(SEMICOLON);
      jj_consume_token(RIGHTBRACE);
     MethodDecl md = new MethodDecl (at, ai, afl, avl, asl, ae); {if (true) return md;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("MethodDecl");
    }
  }

  static final public List <Formal> FormalList() throws ParseException {
    trace_call("FormalList");
    try {
                            List <Formal> afl= new ArrayList<Formal>();
     Type t; Identifier i;
      t = Type();
      i = Identifier();
     Formal f = new Formal(t, i); afl.add(f);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        f = FormalRest();
                       afl.add(f);
      }
     {if (true) return afl;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("FormalList");
    }
  }

  static final public Formal FormalRest() throws ParseException {
    trace_call("FormalRest");
    try {
                     Type t; Identifier i;
      jj_consume_token(COMMA);
      t = Type();
      i = Identifier();
     Formal f = new Formal(t, i); {if (true) return f;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("FormalRest");
    }
  }

  static final public MethodBody MethodBody() throws ParseException {
    trace_call("MethodBody");
    try {
                         List <VarDecl> avl = new ArrayList<VarDecl>(); List <Statement> asl = new ArrayList<Statement>();
      label_8:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_8;
        }
                       VarDecl vd;
        vd = VarDecl();
                                                    avl.add(vd);
      }
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEFTBRACE:
        case IF:
        case WHILE:
        case PRINT:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_9;
        }
      Statement s;
        s = Statement();
                                     asl.add(s);
      }
     MethodBody mb = new MethodBody(avl, asl); {if (true) return mb;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("MethodBody");
    }
  }

  static final public Type Type() throws ParseException {
    trace_call("Type");
    try {
      if (jj_2_3(2)) {
        jj_consume_token(INT);
        jj_consume_token(LEFTBRACKET);
        jj_consume_token(RIGHTBRACKET);
                                                     {if (true) return Type.THE_INT_ARRAY_TYPE;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          jj_consume_token(INT);
           {if (true) return Type.THE_INTEGER_TYPE;}
          break;
        case BOOLEAN:
          jj_consume_token(BOOLEAN);
                   {if (true) return Type.THE_BOOLEAN_TYPE;}
          break;
        case IDENTIFIER:
         Token t;
          t = jj_consume_token(IDENTIFIER);
                                     {if (true) return new IdentifierType(t.beginLine,t.beginColumn,t.image);}
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Type");
    }
  }

  static final public Statement Statement() throws ParseException {
    trace_call("Statement");
    try {
                       Token t; Expression ae; Statement as1; Statement as2;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFTBRACE:
         List <Statement> asl = new ArrayList <Statement>();
        jj_consume_token(LEFTBRACE);
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LEFTBRACE:
          case IF:
          case WHILE:
          case PRINT:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[11] = jj_gen;
            break label_10;
          }
          as1 = Statement();
             asl.add(as1);
        }
        jj_consume_token(RIGHTBRACE);
         Block b = new Block(asl); {if (true) return b;}
        break;
      case IF:
        t = jj_consume_token(IF);
        jj_consume_token(LEFTPAREN);
        ae = Exp1();
        jj_consume_token(RIGHTPAREN);
        as1 = Statement();
        jj_consume_token(ELSE);
        as2 = Statement();
         If i = new If (t.beginLine, t.beginColumn, ae, as1, as2);{if (true) return i;}
        break;
      case WHILE:
        t = jj_consume_token(WHILE);
        jj_consume_token(LEFTPAREN);
        ae = Exp1();
        jj_consume_token(RIGHTPAREN);
        as1 = Statement();
         While w = new While (t.beginLine, t.beginColumn, ae, as1); {if (true) return w;}
        break;
      case PRINT:
        t = jj_consume_token(PRINT);
        jj_consume_token(LEFTPAREN);
        ae = Exp1();
        jj_consume_token(RIGHTPAREN);
        jj_consume_token(SEMICOLON);
         Print p = new Print (t.beginLine, t.beginColumn, ae); {if (true) return p;}
        break;
      case IDENTIFIER:
        as1 = Assign();
         {if (true) return as1;}
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Statement");
    }
  }

  static final public Statement Assign() throws ParseException {
    trace_call("Assign");
    try {
      if (jj_2_4(2)) {
         Identifier ai; Expression ae;
        ai = Identifier();
        jj_consume_token(ASSIGN);
        ae = Exp1();
        jj_consume_token(SEMICOLON);
         Assign a = new Assign (ai.lineNumber, ai.columnNumber, ai, ae); {if (true) return a;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
         Identifier ai;  Expression ae1; Expression ae2;
          ai = Identifier();
          jj_consume_token(LEFTBRACKET);
          ae1 = Exp1();
          jj_consume_token(RIGHTBRACKET);
          jj_consume_token(ASSIGN);
          ae2 = Exp1();
          jj_consume_token(SEMICOLON);
         ArrayAssign aa = new ArrayAssign (ai.lineNumber, ai.columnNumber, ai, ae1, ae2); {if (true) return aa;}
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Assign");
    }
  }

  static final public Expression Exp1() throws ParseException {
    trace_call("Exp1");
    try {
                   Expression e;
      e = AndExp();
     {if (true) return e;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Exp1");
    }
  }

  static final public Expression AndExp() throws ParseException {
    trace_call("AndExp");
    try {
                     Expression e1; Expression e2; Token t;
      e1 = LessThanExp();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_11;
        }
        t = jj_consume_token(AND);
        e2 = LessThanExp();
     e1 = new And(t.beginLine, t.beginColumn, e1, e2);
      }
   {if (true) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("AndExp");
    }
  }

  static final public Expression LessThanExp() throws ParseException {
    trace_call("LessThanExp");
    try {
                          Expression e1; Expression e2; Token t;
      e1 = PlusMinusExp();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LT:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_12;
        }
        t = jj_consume_token(LT);
        e2 = PlusMinusExp();
     e1 = new LessThan(t.beginLine, t.beginColumn, e1, e2);
      }
   {if (true) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LessThanExp");
    }
  }

  static final public Expression PlusMinusExp() throws ParseException {
    trace_call("PlusMinusExp");
    try {
                           Expression e1; Expression e2; Token t;
      e1 = TimesExp();
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_13;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          t = jj_consume_token(PLUS);
          e2 = TimesExp();
                 e1 = new Plus(t.beginLine, t.beginColumn, e1, e2);
          break;
        case MINUS:
          t = jj_consume_token(MINUS);
          e2 = TimesExp();
                 e1 = new Minus(t.beginLine, t.beginColumn, e1, e2);
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
   {if (true) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PlusMinusExp");
    }
  }

  static final public Expression TimesExp() throws ParseException {
    trace_call("TimesExp");
    try {
                       Expression e1; Expression e2; Token t;
      e1 = NotExp();
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULT:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_14;
        }
        t = jj_consume_token(MULT);
        e2 = NotExp();
     e1 = new Times(t.beginLine, t.beginColumn, e1, e2);
      }
   {if (true) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("TimesExp");
    }
  }

  static final public Expression NotExp() throws ParseException {
    trace_call("NotExp");
    try {
                     Expression e; Token t; List<Token> notList = new ArrayList<Token>();
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXCLAMATION:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_15;
        }
        t = jj_consume_token(EXCLAMATION);
                        notList.add(t);
      }
      e = Exp2();
        while(!notList.isEmpty()){ // From back to front.
            t = notList.remove(notList.size()-1);
            e = new Not(t.beginLine, t.beginColumn, e);
        }
        {if (true) return e;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("NotExp");
    }
  }

  static final public Expression Exp2() throws ParseException {
    trace_call("Exp2");
    try {
                   Expression e; Selector s;
      e = ArrayLookupExp();
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_16;
        }
        s = Selector();
            if (s == null){ // Array.Length
                e = new ArrayLength(e);
            } else {
                e = new Call(e, s.i, s.el);
            }
      }
     {if (true) return e;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Exp2");
    }
  }

  static final public Selector Selector() throws ParseException {
    trace_call("Selector");
    try {
      if (jj_2_5(2)) {
        jj_consume_token(DOT);
        jj_consume_token(LENGTH);
         {if (true) return null;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
         Identifier ai; List <Expression> ael = new ArrayList<Expression>();
          jj_consume_token(DOT);
          ai = Identifier();
          jj_consume_token(LEFTPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LEFTPAREN:
          case EXCLAMATION:
          case TRUE:
          case FALSE:
          case THIS:
          case NEW:
          case INTEGER_LITERAL:
          case IDENTIFIER:
            ael = ExpList();
            break;
          default:
            jj_la1[21] = jj_gen;
            ;
          }
          jj_consume_token(RIGHTPAREN);
         Selector s = new Selector(ai, ael); {if (true) return s;}
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Selector");
    }
  }

  static final public List <Expression> ExpList() throws ParseException {
    trace_call("ExpList");
    try {
                             List <Expression> ael = new ArrayList<Expression>(); Expression e;
      e = Exp1();
     ael.add(e);
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_17;
        }
        e = ExpRest();
                    ael.add(e);
      }
     {if (true) return ael;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ExpList");
    }
  }

  static final public Expression ExpRest() throws ParseException {
    trace_call("ExpRest");
    try {
                      Expression e;
      jj_consume_token(COMMA);
      e = Exp1();
                            {if (true) return e;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ExpRest");
    }
  }
